fix horz scrollbars showing on topic list on homepage

--- a/src/static/example_bootstrap.less
+++ b/src/static/example_bootstrap.less
@@ -498,7 +498,8 @@ label.checkbox {
       right: 0;
       bottom: 0;
       left: 0;
-      overflow: scroll;
+      overflow-x: visible;
+      overflow-y: auto;
     }
   }
   .watch-area-container {
@@ -548,7 +549,7 @@ label.checkbox {
       overflow-y: auto;
       z-index: 1100;
       li {
-        cursor: pointer; 
+        cursor: pointer;
       }
     }
     .watch-area-list .is-active {
